--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
 				{% if cook.confirmed == "no" %}
 				<img src="{{url_for('static', filename='question.png')}}">
 				<p>If nobody volunteers,<br><br><img id="cook-small-thumb" src="{{url_for('static', filename=cook.name + '.png')}}"> will cook.</p>
-				<div class="rect-button" onclick="volunteer()"><span>VOLUNTEER</span></div>
+				<div class="rect-button" onclick="location.href='/volunteer';"><span>VOLUNTEER</span></div>
 				{% else %}
 				<img src="{{url_for('static', filename= current_user.name + '.png')}}">
 				<span>{{ cook.name }}</span>
@@ -54,12 +54,12 @@
 			
 				{% if not current_user.name in eaters %}
 				<div class="eater-entry" style="height: 60pt;">
-					<div class="add-button" onclick="addme()"><span><i class="fa fa-plus" aria-hidden="true"></i></span></div>
+					<div class="add-button" onclick="location.href='/addme';"><span><i class="fa fa-plus" aria-hidden="true"></i></span></div>
 					<span>Add me</span>
 				</div>
 				{% else %}
 				<div class="eater-entry" style="height: 60pt;">
-					<div class="add-button" onclick="removeme()"><span><i class="fa fa-minus" aria-hidden="true"></i></span></div>
+					<div class="add-button" onclick="location.href='/removeme';"><span><i class="fa fa-minus" aria-hidden="true"></i></span></div>
 					<span>Remove me</span>
 				</div>
 				{% endif %}
@@ -69,7 +69,7 @@
 		<div class="user-card">
 			<img src="{{url_for('static', filename=current_user.name + '.png')}}">
 			<span>{{current_user.name}}</span>
-			<div class="logout-button" onclick="logout()"><span>LOGOUT</span></div>
+			<div class="logout-button" onclick="location.href='/logout';"><span>LOGOUT</span></div>
 		</div>
 	</div>
 </body>
