Added background color

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,7 @@
 			background-position: left top;
 			background-repeat: no-repeat;
 			background-size: 100% auto;
+			background-color: #aeaeac;
 		}
 	</style>
 </head>
